<resources>

    <string name="maps_api_key">AIzaSyCIznt8eGgFJrX6VFetdgSUSQF9aPEj5Vg</string>

    <string name="app_name">Eventos Musicales</string>

    <string name="btn_Agregar">Agregar</string>
    <string name="btn_Volver">Volver</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="btn_agregar_favoritos">Agregar a Favoritos</string>

    <string name="info_nombre">Nombre: </string>
    <string name="info_fecha">Fecha: </string>
    <string name="info_direccion">Direccion: </string>
    <string name="info_ciudad">Ciudad: </string>
    <string name="info_precio">Precio: </string>
    <string name="info_artista">artista: </string>

    <string name="titulo_favoritos">Eventos Favoritos</string>
    <string name="descripcion_favoritos">Eventos guardados por el usuario</string>

    <string name="titulo_historial">Eventos Guardados</string>
    <string name="descripcion_historial">Eventos guardados automaticamente por el sistema</string>

    <string name="titulo_crear_evento">Creacion de Evento</string>
    <string name="crear_evento_nombre">Nombre del Evento</string>
    <string name="crear_evento_descripcion">Descripcion del Evento</string>
    <string name="crear_evento_precio">Precio del Evento</string>
    <string name="crear_evento_Direccion">Direccion del Evento</string>
    <string name="crear_evento_localizacion">Localizacion del Evento</string>

    <string name="filtro">Filtrar por: </string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="nav_abrir">Open</string>
    <string name="nav_cerrar">Close</string>
    <string name="inicio_sesion">Iniciar sesion</string>
    <string name="inicio_sesion_descripcion">Iniciar sesion como empresa</string>
    <string name="inicio_sesion_rut">Rut empresarial</string>
    <string name="inicio_sesion_rut_placeholder">Ingrese su Rut Empresarial</string>
    <string name="inicio_sesion_password">contraseña</string>
    <string name="inicio_sesion_password_placeholder">Ingrese su contraseña</string>
    <string name="inicio_sesion_recuperar_password">¿Olvidaste la contraseña?</string>
    <string name="inicio_sesion_nocuenta">¿No tiene una cuenta y desea postear los eventos musicales que realiza su empresa u organizacion?</string>
    <string name="inicio_sesion_contacto"><u><b><i>¡Contactanos!</i></b></u></string>

    <string name="crear_nombre_placeholder">Ingresar nombre del evento</string>
    <string name="crear_descripcion_placeholder">Ingresar descripcion del evento </string>
    <string name="crear_artista_placeholder">Nombre del artista</string>
    <string name="crear_aforo_placeholder">aforo maximo del evento </string>
    <string name="crear_coste_placeholder">$20.000 </string>
    <string name="crear_direccion_placeholder">ingresar direccion del evento </string>
    <string name="crear_urlImagen_placeholder">Que void</string>

    <string name="crear_nombre">Nombre del evento</string>
    <string name="crear_descripcion">Descripcion del evento</string>
    <string name="crear_artista">Artista del evento </string>
    <string name="crear_aforo">Aforo del evento </string>
    <string name="crear_coste">Coste del evento </string>
    <string name="crear_direccion">Direccion del evento </string>
    <string name="crear_fecha">Fecha del evento </string>
    <string name="crear_ciudad">Ciudad del evento </string>
    <string name="crear_localizacion">Seleccione la localizacion exacta donde se realizara el evento</string>
    <string name="crear_urlImagen">Ingrese la url de la imagen del evento</string>

    <string name="btn_publicar">Publicar Evento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>