<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetalleEventoFragment"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imvFoto"
            android:layout_width="0dp"
            android:layout_height="204dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/place_holder" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/info_nombre"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imvFoto" />

        <TextView
            android:id="@+id/txtArtista"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:text="@string/info_artista"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:text="@string/info_direccion"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtArtista" />

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_fecha"
            app:layout_constraintEnd_toStartOf="@+id/divider3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <TextView
            android:id="@+id/txtCiudad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:text="@string/info_ciudad"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDireccion" />

        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginTop="16dp"
            android:text="@string/info_precio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider3"
            app:layout_constraintTop_toBottomOf="@+id/divider5" />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/divider5"
            app:layout_constraintStart_toEndOf="@+id/divider4"
            app:layout_constraintTop_toBottomOf="@+id/txtCiudad" />

        <View
            android:id="@+id/divider4"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCiudad" />

        <View
            android:id="@+id/divider5"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCiudad" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_agregar_favoritos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            tools:context=".MapsActivity" />


        <Button
            android:id="@+id/btn_agregar_favoritos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/btn_agregar_favoritos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="@+id/map" />

        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/txtNombre"
            app:layout_constraintStart_toStartOf="@+id/txtNombre"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

